snifferlib/rtsp-parser/http11_parser.cpp

#line 1 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
/**
 * Copyright (c) 2005 Zed A. Shaw
 * You can redistribute it and/or modify it under the same terms as Ruby.
 */
#include "http11_parser.h"
#include <stdio.h>
#include <assert.h>
#include <stdlib.h>
#include <ctype.h>
#include <string.h>

/*
 * capitalizes all lower-case ASCII characters,
 * converts dashes to underscores.
 */
static void snake_upcase_char(char *c)
{
    if (*c >= 'a' && *c <= 'z') {
        *c &= ~0x20;
    } else if (*c == '-') {
        *c = '_';
    }
}

#define LEN(AT, FPC) (FPC - buffer - parser->AT)
#define MARK(M,FPC) (parser->M = (FPC) - buffer)
#define PTR_TO(F) (buffer + parser->F)


/** Machine **/


#line 217 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"


/** Data **/

#line 41 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.cpp"
static const int http_parser_start = 1;
static const int http_parser_first_final = 306;
static const int http_parser_error = 0;

static const int http_parser_en_main = 1;


#line 221 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"

int http_parser_init(http_parser *parser)    {
    int cs = 0;
    
#line 54 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.cpp"
	{
	cs = http_parser_start;
	}

#line 225 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
    parser->cs = cs;
    parser->body_start = 0;
    parser->content_len = 0;
    parser->mark = 0;
    parser->nread = 0;
    parser->field_len = 0;
    parser->field_start = 0;

    return(1);
}


/** exec **/
size_t http_parser_execute(http_parser *parser, const char *buffer, size_t len, size_t off)    {
    const char *p, *pe;
    int cs = parser->cs;

    assert(off <= len && "offset past end of buffer");

    p = buffer+off;
    pe = buffer+len;

    assert(pe - p == len - off && "pointers aren't same distance");


    
#line 86 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.cpp"
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
case 1:
	switch( (*p) ) {
		case 65: goto tr0;
		case 68: goto tr2;
		case 71: goto tr3;
		case 79: goto tr4;
		case 80: goto tr5;
		case 82: goto tr6;
		case 83: goto tr7;
		case 84: goto tr8;
	}
	goto st0;
st0:
cs = 0;
	goto _out;
tr0:
#line 36 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{MARK(mark, p); }
	goto st2;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
#line 115 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.cpp"
	if ( (*p) == 78 )
		goto st3;
	goto st0;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
	if ( (*p) == 78 )
		goto st4;
	goto st0;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
	if ( (*p) == 79 )
		goto st5;
	goto st0;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
	if ( (*p) == 85 )
		goto st6;
	goto st0;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
	if ( (*p) == 78 )
		goto st7;
	goto st0;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
	if ( (*p) == 67 )
		goto st8;
	goto st0;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
	if ( (*p) == 69 )
		goto st9;
	goto st0;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
	switch( (*p) ) {
		case 32: goto tr16;
		case 114: goto tr17;
	}
	goto st0;
tr16:
#line 136 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
			if(parser->request_method_type)
			{
				parser->request_method_type(parser, http_method_type_rtsp_ANNOUNCE);
			}
		}
#line 64 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
        if(parser->request_method != NULL)
        {
            parser->request_method(parser, parser->data, PTR_TO(mark), LEN(mark, p));
         }
    }
	goto st10;
tr123:
#line 129 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
			if(parser->request_method_type)
			{
				parser->request_method_type(parser, http_method_type_rtsp_DESCRIBE);
			}
		}
#line 64 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
        if(parser->request_method != NULL)
        {
            parser->request_method(parser, parser->data, PTR_TO(mark), LEN(mark, p));
         }
    }
	goto st10;
tr137:
#line 143 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
			if(parser->request_method_type)
			{
				parser->request_method_type(parser, http_method_type_rtsp_GET_PARAMETER);
			}
		}
#line 64 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
        if(parser->request_method != NULL)
        {
            parser->request_method(parser, parser->data, PTR_TO(mark), LEN(mark, p));
         }
    }
	goto st10;
tr145:
#line 150 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
			if(parser->request_method_type)
			{
				parser->request_method_type(parser, http_method_type_rtsp_OPTIONS);
			}
		}
#line 64 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
        if(parser->request_method != NULL)
        {
            parser->request_method(parser, parser->data, PTR_TO(mark), LEN(mark, p));
         }
    }
	goto st10;
tr152:
#line 157 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
			if(parser->request_method_type)
			{
				parser->request_method_type(parser, http_method_type_rtsp_PAUSE);
			}
		}
#line 64 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
        if(parser->request_method != NULL)
        {
            parser->request_method(parser, parser->data, PTR_TO(mark), LEN(mark, p));
         }
    }
	goto st10;
tr156:
#line 164 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
			if(parser->request_method_type)
			{
				parser->request_method_type(parser, http_method_type_rtsp_PLAY);
			}
		}
#line 64 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
        if(parser->request_method != NULL)
        {
            parser->request_method(parser, parser->data, PTR_TO(mark), LEN(mark, p));
         }
    }
	goto st10;
tr165:
#line 171 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
			if(parser->request_method_type)
			{
				parser->request_method_type(parser, http_method_type_rtsp_RECORD);
			}
		}
#line 64 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
        if(parser->request_method != NULL)
        {
            parser->request_method(parser, parser->data, PTR_TO(mark), LEN(mark, p));
         }
    }
	goto st10;
tr172:
#line 178 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
			if(parser->request_method_type)
			{
				parser->request_method_type(parser, http_method_type_rtsp_REDIRECT);
			}
		}
#line 64 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
        if(parser->request_method != NULL)
        {
            parser->request_method(parser, parser->data, PTR_TO(mark), LEN(mark, p));
         }
    }
	goto st10;
tr344:
#line 185 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
			if(parser->request_method_type)
			{
				parser->request_method_type(parser, http_method_type_rtsp_SETUP);
			}
		}
#line 64 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
        if(parser->request_method != NULL)
        {
            parser->request_method(parser, parser->data, PTR_TO(mark), LEN(mark, p));
         }
    }
	goto st10;
tr355:
#line 193 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
			if(parser->request_method_type)
			{
				parser->request_method_type(parser, http_method_type_rtsp_SET_PARAMETER);
			}
		}
#line 64 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
        if(parser->request_method != NULL)
        {
            parser->request_method(parser, parser->data, PTR_TO(mark), LEN(mark, p));
         }
    }
	goto st10;
tr364:
#line 200 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
			if(parser->request_method_type)
			{
				parser->request_method_type(parser, http_method_type_rtsp_TEARDOWN);
			}
		}
#line 64 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
        if(parser->request_method != NULL)
        {
            parser->request_method(parser, parser->data, PTR_TO(mark), LEN(mark, p));
         }
    }
	goto st10;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
#line 350 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.cpp"
	switch( (*p) ) {
		case 32: goto st10;
		case 114: goto tr19;
	}
	goto st0;
tr19:
#line 36 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{MARK(mark, p); }
	goto st11;
tr17:
#line 136 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
			if(parser->request_method_type)
			{
				parser->request_method_type(parser, http_method_type_rtsp_ANNOUNCE);
			}
		}
#line 64 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
        if(parser->request_method != NULL)
        {
            parser->request_method(parser, parser->data, PTR_TO(mark), LEN(mark, p));
         }
    }
#line 36 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{MARK(mark, p); }
	goto st11;
tr124:
#line 129 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
			if(parser->request_method_type)
			{
				parser->request_method_type(parser, http_method_type_rtsp_DESCRIBE);
			}
		}
#line 64 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
        if(parser->request_method != NULL)
        {
            parser->request_method(parser, parser->data, PTR_TO(mark), LEN(mark, p));
         }
    }
#line 36 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{MARK(mark, p); }
	goto st11;
tr138:
#line 143 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
			if(parser->request_method_type)
			{
				parser->request_method_type(parser, http_method_type_rtsp_GET_PARAMETER);
			}
		}
#line 64 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
        if(parser->request_method != NULL)
        {
            parser->request_method(parser, parser->data, PTR_TO(mark), LEN(mark, p));
         }
    }
#line 36 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{MARK(mark, p); }
	goto st11;
tr146:
#line 150 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
			if(parser->request_method_type)
			{
				parser->request_method_type(parser, http_method_type_rtsp_OPTIONS);
			}
		}
#line 64 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
        if(parser->request_method != NULL)
        {
            parser->request_method(parser, parser->data, PTR_TO(mark), LEN(mark, p));
         }
    }
#line 36 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{MARK(mark, p); }
	goto st11;
tr153:
#line 157 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
			if(parser->request_method_type)
			{
				parser->request_method_type(parser, http_method_type_rtsp_PAUSE);
			}
		}
#line 64 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
        if(parser->request_method != NULL)
        {
            parser->request_method(parser, parser->data, PTR_TO(mark), LEN(mark, p));
         }
    }
#line 36 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{MARK(mark, p); }
	goto st11;
tr157:
#line 164 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
			if(parser->request_method_type)
			{
				parser->request_method_type(parser, http_method_type_rtsp_PLAY);
			}
		}
#line 64 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
        if(parser->request_method != NULL)
        {
            parser->request_method(parser, parser->data, PTR_TO(mark), LEN(mark, p));
         }
    }
#line 36 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{MARK(mark, p); }
	goto st11;
tr166:
#line 171 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
			if(parser->request_method_type)
			{
				parser->request_method_type(parser, http_method_type_rtsp_RECORD);
			}
		}
#line 64 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
        if(parser->request_method != NULL)
        {
            parser->request_method(parser, parser->data, PTR_TO(mark), LEN(mark, p));
         }
    }
#line 36 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{MARK(mark, p); }
	goto st11;
tr173:
#line 178 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
			if(parser->request_method_type)
			{
				parser->request_method_type(parser, http_method_type_rtsp_REDIRECT);
			}
		}
#line 64 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
        if(parser->request_method != NULL)
        {
            parser->request_method(parser, parser->data, PTR_TO(mark), LEN(mark, p));
         }
    }
#line 36 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{MARK(mark, p); }
	goto st11;
tr345:
#line 185 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
			if(parser->request_method_type)
			{
				parser->request_method_type(parser, http_method_type_rtsp_SETUP);
			}
		}
#line 64 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
        if(parser->request_method != NULL)
        {
            parser->request_method(parser, parser->data, PTR_TO(mark), LEN(mark, p));
         }
    }
#line 36 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{MARK(mark, p); }
	goto st11;
tr356:
#line 193 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
			if(parser->request_method_type)
			{
				parser->request_method_type(parser, http_method_type_rtsp_SET_PARAMETER);
			}
		}
#line 64 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
        if(parser->request_method != NULL)
        {
            parser->request_method(parser, parser->data, PTR_TO(mark), LEN(mark, p));
         }
    }
#line 36 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{MARK(mark, p); }
	goto st11;
tr365:
#line 200 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
			if(parser->request_method_type)
			{
				parser->request_method_type(parser, http_method_type_rtsp_TEARDOWN);
			}
		}
#line 64 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
        if(parser->request_method != NULL)
        {
            parser->request_method(parser, parser->data, PTR_TO(mark), LEN(mark, p));
         }
    }
#line 36 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{MARK(mark, p); }
	goto st11;
st11:
	if ( ++p == pe )
		goto _test_eof11;
case 11:
#line 562 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.cpp"
	if ( (*p) == 116 )
		goto st12;
	goto st0;
st12:
	if ( ++p == pe )
		goto _test_eof12;
case 12:
	if ( (*p) == 115 )
		goto st13;
	goto st0;
st13:
	if ( ++p == pe )
		goto _test_eof13;
case 13:
	if ( (*p) == 112 )
		goto st14;
	goto st0;
st14:
	if ( ++p == pe )
		goto _test_eof14;
case 14:
	if ( (*p) == 58 )
		goto st15;
	goto st0;
st15:
	if ( ++p == pe )
		goto _test_eof15;
case 15:
	if ( (*p) == 47 )
		goto st16;
	goto st0;
st16:
	if ( ++p == pe )
		goto _test_eof16;
case 16:
	if ( (*p) == 47 )
		goto st17;
	goto st0;
st17:
	if ( ++p == pe )
		goto _test_eof17;
case 17:
	switch( (*p) ) {
		case 32: goto tr27;
		case 35: goto tr28;
		case 37: goto st48;
		case 47: goto st0;
		case 59: goto tr30;
		case 63: goto tr31;
		case 82: goto tr32;
		case 127: goto st0;
	}
	if ( 0 <= (*p) && (*p) <= 31 )
		goto st0;
	goto st18;
st18:
	if ( ++p == pe )
		goto _test_eof18;
case 18:
	switch( (*p) ) {
		case 32: goto tr27;
		case 35: goto tr28;
		case 37: goto st48;
		case 59: goto tr30;
		case 63: goto tr31;
		case 82: goto tr32;
		case 127: goto st0;
	}
	if ( 0 <= (*p) && (*p) <= 31 )
		goto st0;
	goto st18;
tr27:
#line 101 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
        if(parser->request_path != NULL)
            parser->request_path(parser, parser->data, PTR_TO(mark), LEN(mark,p));
    }
#line 71 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
        if(parser->request_uri != NULL)
        {
            parser->request_uri(parser, parser->data, PTR_TO(mark), LEN(mark, p));
		}            
    }
	goto st19;
tr57:
#line 36 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{MARK(mark, p); }
#line 78 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
        if(parser->fragment != NULL)
            parser->fragment(parser, parser->data, PTR_TO(mark), LEN(mark, p));
    }
	goto st19;
tr61:
#line 78 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
        if(parser->fragment != NULL)
            parser->fragment(parser, parser->data, PTR_TO(mark), LEN(mark, p));
    }
	goto st19;
tr75:
#line 71 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
        if(parser->request_uri != NULL)
        {
            parser->request_uri(parser, parser->data, PTR_TO(mark), LEN(mark, p));
		}            
    }
	goto st19;
tr82:
#line 84 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
		MARK(query_start, p);
	 }
#line 89 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
        if(parser->query_string != NULL)
            parser->query_string(parser, parser->data, PTR_TO(query_start), LEN(query_start, p));
    }
#line 71 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
        if(parser->request_uri != NULL)
        {
            parser->request_uri(parser, parser->data, PTR_TO(mark), LEN(mark, p));
		}            
    }
	goto st19;
tr87:
#line 89 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
        if(parser->query_string != NULL)
            parser->query_string(parser, parser->data, PTR_TO(query_start), LEN(query_start, p));
    }
#line 71 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
        if(parser->request_uri != NULL)
        {
            parser->request_uri(parser, parser->data, PTR_TO(mark), LEN(mark, p));
		}            
    }
	goto st19;
st19:
	if ( ++p == pe )
		goto _test_eof19;
case 19:
#line 709 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.cpp"
	switch( (*p) ) {
		case 32: goto st19;
		case 82: goto tr34;
	}
	goto st0;
tr34:
#line 36 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{MARK(mark, p); }
	goto st20;
st20:
	if ( ++p == pe )
		goto _test_eof20;
case 20:
#line 723 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.cpp"
	if ( (*p) == 84 )
		goto st21;
	goto st0;
st21:
	if ( ++p == pe )
		goto _test_eof21;
case 21:
	if ( (*p) == 83 )
		goto st22;
	goto st0;
st22:
	if ( ++p == pe )
		goto _test_eof22;
case 22:
	if ( (*p) == 80 )
		goto st23;
	goto st0;
st23:
	if ( ++p == pe )
		goto _test_eof23;
case 23:
	if ( (*p) == 47 )
		goto st24;
	goto st0;
st24:
	if ( ++p == pe )
		goto _test_eof24;
case 24:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st25;
	goto st0;
st25:
	if ( ++p == pe )
		goto _test_eof25;
case 25:
	if ( (*p) == 46 )
		goto st26;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st25;
	goto st0;
st26:
	if ( ++p == pe )
		goto _test_eof26;
case 26:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st27;
	goto st0;
st27:
	if ( ++p == pe )
		goto _test_eof27;
case 27:
	switch( (*p) ) {
		case 13: goto tr42;
		case 32: goto tr43;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st27;
	goto st0;
tr42:
#line 95 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
        if(parser->http_version != NULL)
            parser->http_version(parser, parser->data, PTR_TO(mark), LEN(mark, p));
    }
	goto st28;
tr51:
#line 53 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
			MARK(mark, p);
		}
#line 57 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
        if(parser->http_field != NULL) 
        {
            parser->http_field(parser,parser->data, PTR_TO(field_start), parser->field_len, PTR_TO(mark), LEN(mark, p));
        }
    }
	goto st28;
tr54:
#line 57 "/home/xusong/project/c25pZmZlcl9saWI-/snifferlib/rtsp-parser/http11_parser.rl"
	{
        if(parser->http_field != NULL) 
        {
